# perso-2025b-mateus250402

./: CHANGELOG.md  LICENSE  README.md  backlog.db  games-backlog.cabal
app/: Main.hs  Testes.hs
app/DB/: DB.hs  schema.sql
app/api/: Igdb.hs  igdb_settings.txt
app/models/: Games.hs  User.hs
app/pages/: AddGame.hs  Backlog.hs  Confirm.hs  Login.hs  Selection.hs
app/utils/: Data.hs  Format.hs  Handles.hs  Session.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-25212/: .ghc.environment.x86_64-mingw32-9.6.7
