cabal-version:      3.0

name:               games-backlog
version:            0.1.0.0
synopsis:           Um simples backlog para registrar games
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mateus Cardoso
maintainer:         151787016+mateus250402@users.noreply.github.com
category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable games-backlog
    import:           warnings
    main-is:          Main.hs

    -- Módulos do projeto
    other-modules:    DB.DB, 
                      Pages.Index, Pages.Backlog, Pages.AddGame,
                      Pages.Register, Pages.Login

    -- Linguagem e extensões
    default-language: Haskell2010
    other-extensions: OverloadedStrings, RecordWildCards, DeriveGeneric

    -- Dependências
    build-depends:  base ^>=4.18.3.0,
                    scotty,
                    lucid,
                    wreq,
                    aeson,
                    text,
                    lens,
                    bytestring,
                    http-client,
                    time,
                    sqlite-simple,
                    mtl,
                    containers,
                    bcrypt,
                    crypton,
                    base64-bytestring,
                    memory,
                    wai-extra,
                    http-types,
                    cookie,              
                    blaze-builder,       
                    wai,
                    http-conduit           

    -- Diretório com os arquivos Haskell
    hs-source-dirs:   app